fix: set height for package-card-item class and change value for gap of package-card class

--- a/practice/src/css/sections/package.css
+++ b/practice/src/css/sections/package.css
@@ -5,10 +5,7 @@
 .package-card-item::before {
   content: "";
   position: absolute;
-  top: -10px;
-  left: -10px;
-  right: -10px;
-  bottom: -10px;
+  inset: -10px;
   cursor: pointer;
   border-radius: var(--primary-border-radius);
   border: 4px solid var(--primary-border-radius-color);
@@ -17,6 +14,7 @@
 
 .package-card-item {
   position: relative;
+  height: 380px;
 
   &:hover::before {
     opacity: 1;
@@ -99,7 +97,7 @@
 
 .package-card {
   display: grid;
-  gap: 20px;
+  gap: 30px;
 }
   
 /* Tablet */
@@ -128,5 +126,9 @@
 
   .btn-package {
     padding: 14px 24px;
+  }
+
+  .package-card-item::before {
+    inset: -15px;
   }
 }
